--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How 60 Minutes a Day Can Change Your Life</title>
     <link rel="shortcut icon" href="https://miro.medium.com/v2/5d8de952517e8160e40ef9841c781cdc14a5db313057fa3c3de41c6f5b494b19" type="image/x-icon">
+    <link href="prism.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="content">
         <h1>How 60 Minutes a Day Can Change Your Life</h1>
+        <pre><code class="language-html">&lt;div&gt;
+        &lt;img src=&quot;workplace.jpg&quot; alt=&quot;Workplace&quot; usemap=&quot;#workmap&quot; width=&quot;400&quot;
+        height=&quot;379&quot;&gt;
+
+        &lt;map name=&quot;workmap&quot;&gt;
+        &lt;area shape=&quot;rect&quot; coords=&quot;34,44,270,350&quot; alt=&quot;Computer&quot;
+        href=&quot;computer.html&quot;&gt;
+        &lt;area shape=&quot;rect&quot; coords=&quot;290,172,333,250&quot; alt=&quot;Phone&quot; href=&quot;phone.html&quot;&gt;
+        &lt;area shape=&quot;circle&quot; coords=&quot;337,300,44&quot; alt=&quot;Cup of coffee&quot;
+        href=&quot;coffee.html&quot;&gt;
+    &lt;/map&gt;
+&lt;/div&gt;</code></pre>
         <h2>The simple commitment most people avoid that can dramatically transform you</h2>
         <div class="author-info">
             <img src="https://miro.medium.com/v2/resize:fill:88:88/1*t1i6jARQrg_Vz2qDXMA1Kg.jpeg" alt="Roy Phang" />
@@ -201,5 +214,6 @@
                 Workbook</i>, with structured exercises to help put them into action. <a
                 href="https://www.amazon.com/dp/B0F1DC76YK" target="_blank">Check it out here.</a></p>
     </div>
+    <script src="prism.js"></script>
 </body>
 </html>
