--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 &lt;/div&gt;</code></pre>
         <h2>The simple commitment most people avoid that can dramatically transform you</h2>
         <div class="author-info">
-            <img src="https://miro.medium.com/v2/resize:fill:88:88/1*t1i6jARQrg_Vz2qDXMA1Kg.jpeg" alt="Roy Phang" />
+            <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Roy Phang" />
             <div>
                 <p>
                     Roy Phang <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
@@ -96,7 +96,7 @@
         </div>
         <figure>
             <picture>
-                <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*mQMV9oRJY-6lLMpqUJKehw.jpeg"
+                <img src="https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     alt="How 60 Minutes a Day Can Change Your Life">
                 <figcaption>
                     Photo by <u>Markus Spiske</u>/ Pexels
